tests/baselines/reference/unicodeExtendedEscapesInRegularExpressions17(target=es5).errors.txt
unicodeExtendedEscapesInRegularExpressions17.ts(1,13): error TS1125: Hexadecimal digit expected.
unicodeExtendedEscapesInRegularExpressions17.ts(1,14): error TS1508: Unexpected '}'. Did you mean to escape it with backslash?
unicodeExtendedEscapesInRegularExpressions17.ts(1,18): error TS1125: Hexadecimal digit expected.
unicodeExtendedEscapesInRegularExpressions17.ts(1,19): error TS1508: Unexpected '}'. Did you mean to escape it with backslash?
unicodeExtendedEscapesInRegularExpressions17.ts(1,23): error TS1125: Hexadecimal digit expected.
unicodeExtendedEscapesInRegularExpressions17.ts(1,24): error TS1508: Unexpected '}'. Did you mean to escape it with backslash?


==== unicodeExtendedEscapesInRegularExpressions17.ts (6 errors) ====
    var x = /\u{r}\u{n}\u{t}/gu;
                
!!! error TS1125: Hexadecimal digit expected.
                 ~
!!! error TS1508: Unexpected '}'. Did you mean to escape it with backslash?
                     
!!! error TS1125: Hexadecimal digit expected.
                      ~
!!! error TS1508: Unexpected '}'. Did you mean to escape it with backslash?
                          
!!! error TS1125: Hexadecimal digit expected.
                           ~
!!! error TS1508: Unexpected '}'. Did you mean to escape it with backslash?
    